[gd_scene load_steps=2 format=3 uid="uid://cti5jp8tp1rf8"]

[ext_resource type="Script" path="res://Scripts/Multi2.gd" id="1_pjngi"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_pjngi")

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 133.0
offset_right = 128.0
offset_bottom = 169.0
text = "HOST"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 169.0
offset_right = 128.0
offset_bottom = 205.0
text = "JOIN"

[node name="Start" type="Button" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 205.0
offset_right = 128.0
offset_bottom = 241.0
text = "START"

[connection signal="button_down" from="Host" to="." method="_on_host_button_down"]
[connection signal="button_down" from="Join" to="." method="_on_join_button_down"]
[connection signal="button_down" from="Start" to="." method="_on_start_button_down"]
